CSP policy issue solve & server add changed

--- a/.gitignore
+++ b/.gitignore
@@ -93,6 +93,7 @@ js-dist
 storage/*
 kolibri/content/content_db/*.sqlite3
 kolibri/core/content/contentschema/migrations/*
+kolibri/core/content/migrations/*
 # Check in h5p specific files
 !kolibri/core/content/static/h5p/
 
